<resources>
    <string-array name="entries_facturacion">
        <item>Factura MT</item>
    </string-array>
    <string-array name="entryvalues_facturacion">
        <item>FA</item>
    </string-array>
    <string name="error_internet">Error, No tiene conexion a internet</string>
    <string name="error_minchar">Error, debe especificar un criterio de busqueda de mas de 3 caracteres</string>
    <string name="prefijo">Prefijo</string>
    <string name="nueva_resolucion">Nueva resolucion</string>
    <string name="vacio"></string>
    <string name="changeresolution">Cambiar resolucion</string>
    <string name="fin_resolucion">Numeracion agotandose</string>
    <string name="almnotificacion">Alarma de Notificacion</string>
    <string name="salmnotificacion">Tono por defecto</string>
    <string name="notificacion_ochoam">La hora de notificacion es a las </string>
    <string name="hnotificacion">Hora de Notificacion</string>
    <string name="notificacionoff">Notificacion Descativada</string>
    <string name="anotificacion">Activar Notificacion</string>
    <string name="notificacion">NOTIFICACION</string>
    <string name="resoluciones">Seleccion de Resoluciones</string>
    <string name="config_widget_resoluciones">Configurar Widget</string>
    <string name="widget_resoluciones">Widget de Resoluciones</string>
    <string name="cuota">Cuota</string>
    <string name="actual">Act</string>
    <string name="max">Max</string>
    <string name="resolucion">Resolucion</string>
    <string name="sresolucion">Seleccione la resolucion</string>
    <string name="atrm">Actualizar TRM</string>
    <string name="atercero">Administracion de Terceros</string>
    <string name="error_guardar">Error, el documento ya se encuentra guardado</string>
    <string name="error_plantilla">Error, Falta ingresar la plantilla de compra</string>
    <string name="error_dcredito">Error, Falta ingresar los dias de credito</string>
    <string name="error_ncompra">Error, Falta ingresar el No. de la compra</string>
    <string name="error_recibido">Error, Falta seleccionar la persona quien recibe la mercancia</string>
    <string name="error_transportadora">Error, Falta seleccionar la transportadora</string>
    <string name="error_fechar">Error, Falta ingresar la fecha de recepcion de la mercancia</string>
    <string name="error_guia">Error, Falta ingresar el No. de Guia</string>
    <string name="error_peso">Error, Falta ingresar peso de la mercancia</string>
    <string name="error_cajas">Error, Falta ingresar el No. de cajas</string>
    <string name="tvalor">Valor</string>
    <string name="cuenta">Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="base">Base</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="retenciones">Retenciones</string>
    <string name="total_factura_compra">Total Compra</string>
    <string name="valor_neto_compra">Neto Compra</string>
    <string name="iva_regimen_simplificado">+ IVA Regimen Simplificado</string>
    <string name="rete_fuente">- Retencion en la fuente</string>
    <string name="rete_iva">- Retencion de IVA</string>
    <string name="rete_ica">- Retencion de ICA</string>
    <string name="total_retenciones">Total Retenciones</string>
    <string name="cargar_plantilla">Cargar Plantilla</string>
    <string name="buscar_empleado">Buscar Empleado</string>
    <string name="dgenerales">Datos Generales</string>
    <string name="ncompra">No. de Compra</string>
    <string name="dcredito">Dias de Credito</string>
    <string name="info_compra">Informacion de la Compra</string>
    <string name="info_guia">Informacion de la Guia</string>
    <string name="recibido">Recibido por</string>
    <string name="ncajas">No. de Cajas</string>
    <string name="peso">Peso</string>
    <string name="nguia">No. de Guia</string>
    <string name="fecha_recibido">Fecha de Recepcion</string>
    <string name="transportadora">Transportadora</string>
    <string name="terceros">Terceros</string>
    <string name="ntercero">Nuevo Tercero</string>
    <string name="cargando">Cargando</string>
    <string name="app_name">Emaku Movil</string>
    <string name="empresa">Empresa</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Iniciar Sesión</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Emaku Movil</string>
    <string name="title_activity_menu">Emaku Movil</string>
    <string name="cartera">Cartera</string>
    <string name="pedidos">Pedidos</string>
    <string name="Informes">informes</string>
    <string name="inventarios">Inventarios</string>
    <string name="caja">Caja</string>
    <string name="proveedores">Proveedores</string>
    <string name="title_activity_cartera">Informe de Cartera</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="tercero">Tercero</string>
    <string name="title_activity_upload_photo">Cargar Fotografia</string>
    <string name="barcode">Barcode</string>
    <string name="ref">Referencia</string>
    <string name="imagenes">Cargar Imagenes</string>
    <string name="marca">Marca</string>
    <string name="title_activity_query_cash">Consultar Arqueos de Caja</string>
    <string name="title_activity_view_cash_data">ViewCashDataActivity</string>
    <string name="tarqueo">T. Arqueo</string>
    <string name="recaudo">Recaudo</string>
    <string name="diff">Diferencia</string>
    <string name="title_activity_detail_cash">DetailCashActivity</string>
    <string name="docsrecaudo">Documentos Registrados en Caja</string>
    <string name="inforecaudo">Informacion de Recaudo</string>
    <string name="totaldocs">Total Documentos</string>
    <string name="totalrec">Total Recaudo</string>
    <string name="title_activity_detail_documents">Documentos Detallados</string>
    <string name="ventas">Ventas del Dia</string>
    <string name="title_activity_day_sales">Ventas del Dia</string>
    <string name="infodia">Movimientos por Usuario</string>
    <string name="title_activity_user_day">Movimiento Diario</string>
    <string name="title_activity_detail_day_documents">Documentos por Caja</string>
    <string name="title_activity_master_product">Maestro de Productos</string>
    <string name="leer">Leer</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo">Nuevo</string>
    <string name="ajustes">Ajuste de Inventarios</string>
    <string name="arqueo">Arqueos de Caja</string>
    <string name="productos">Productos</string>
    <string name="recolectores">Recolectores de Productos</string>
    <string name="abono_cartera">Abono a Cartera</string>
    <string name="informes_cartera">Informes de Cartera</string>
    <string name="abono_cxp">Abono a Cuentas por Pagar</string>
    <string name="informes_cxp">Informes de Cuentas por Pagar</string>
    <string name="cxp">Cuentas por Pagar</string>
    <string name="maestro_productos">Maestro de Productos</string>
    <string name="anular_documentos">Anular Documentos</string>
    <string name="documentos">Documentos</string>
    <string name="title_activity_fit_inventory">Ajustar Inventarios</string>
    <string name="fecha">Fecha</string>
    <string name="proveedor">Proveedor</string>
    <string name="referencia">Referencia</string>
    <string name="bodega">Bodega</string>
    <string name="hora">Hora</string>
    <string name="consultar_recolectores">Consultar Recolectores</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="clave">Palabra Clave</string>
    <string name="buscar_proveedor">Buscar Proveedor</string>
    <string name="buscar_marca">Buscar Marca</string>
    <string name="buscar_referencia">Buscar Referencia</string>
    <string name="buscar_bodega">Buscar Bodega</string>
    <string name="title_activity_selected_data_dialog">Seleccionar Registro</string>
    <string name="limpiar_formulario">Limpiar Formulario</string>
    <string name="title_activity_list_fit_inventory">Productos por Ajustar</string>
    <string name="unidades">Unidades</string>
    <string name="pesos">Pesos</string>
    <string name="faltantes">Faltantes</string>
    <string name="sobrantes">Sobrantes</string>
    <string name="guardar_doc">Guardar Documento</string>
    <string name="sdo_sistema">Saldo Sistema</string>
    <string name="sdo_fisico">Saldo Fisico</string>
    <string name="diferencia">Diferencia</string>
    <string name="productos_inconsistentes">Productos Inconsistentes</string>
    <string name="error_bodega">Error, Seleccione una Bodega</string>
    <string name="error_fecha">Error, Seleccione una Fecha</string>
    <string name="error_hora">Error, Seleccione una Hora</string>
    <string name="error_rdesde">Error, Digite recolector inicial</string>
    <string name="error_rhasta">Error, Digite recolector final</string>
    <string name="title_activity_search_collector">Consulta de Recolectores</string>
    <string name="numero">Numero</string>
    <string name="barras_escaneadas">Barras Escaneadas</string>
    <string name="articulos_0">Articulos: 0</string>
    <string name="total_articulos">Total Articulos</string>
    <string name="title_activity_cartera_cx_p">Emaku Movil</string>
    <string name="title_activity_list_cartera">Emaku Movil</string>
    <string name="lista_documentos">Listado de Documentos </string>
    <string name="saldo_anterior">Saldo Anterior</string>
    <string name="abonos">Abonos</string>
    <string name="nuevo_saldo">Nuevo Saldo</string>
    <string name="descuentos">Descuentos</string>
    <string name="descuento">Desc</string>
    <string name="abono">Abono</string>
    <string name="saldo">Saldo</string>
    <string name="total">Total</string>
    <string name="abono_parcial">Abono Parcial a Documento</string>
    <string name="abono_a_cuenta">Abono a Cuenta</string>
    <string name="base_descuento">Base de Descuento</string>
    <string name="total_factura">Total Factura</string>
    <string name="mdescuento">- Descuento</string>
    <string name="desc1">% Desc 1</string>
    <string name="desc2">% Desc 2</string>
    <string name="desc3">% Desc 3</string>
    <string name="error_descuento">Error, Verifique el % del descuento</string>
    <string name="error_mayor_valor">Error, El valor de los abonos mas descuentos supera el valor del documento</string>
    <string name="total_cuenta">Total Cuenta</string>
    <string name="forma_pago">Forma de Pago</string>
    <string name="total_pago">Total a Pagar</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="consignacion">Consignacion</string>
    <string name="cambio">Cambio</string>
    <string name="tarjeta">Tarjeta:</string>
    <string name="banco">Banco:</string>
    <string name="error_pago">Error, debe seleccionar al menos un documento para cancelar</string>
    <string name="error_valorok">Error, no se puede cancelar por este medio; el total del documento ya esta pagado</string>
    <string name="error_tarjetasbancos">Error, El valor de las tarjetas mas consignaciones no puede ser mayor al valor a pagar</string>
    <string name="error_fpago">Error, verifique su forma de pago</string>
    <string name="bancos">Bancos</string>
    <string name="title_activity_annul_document">Anular Documentos</string>
    <string name="compras">Compras</string>
    <string name="trm">T.R.M.</string>
    <string name="ccompra">Cargar compra</string>
    <string name="plantilla_con_barra">Importar plantilla Excel con barra</string>
    <string name="plantilla_sin_barra">Importar plantilla Excel sin barra</string>
    <string name="resolucion_facturacion">Resolucion de Facturacion</string>
    <string name="tventas">Ventas</string>
</resources>