<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory>
        <ListPreference
            android:dialogTitle="@string/resolucion"
            android:entries="@array/entries_facturacion"
            android:entryValues="@array/entryvalues_facturacion"
            android:key="list_resoluciones"
            android:summary="@string/sresolucion"
            android:title="@string/resolucion" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notificacion" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="activa_notificacion"
            android:summary="@string/notificacionoff"
            android:title="@string/anotificacion" >
        </CheckBoxPreference>

        <com.example.emakumovil.components.TimePickerPreference
            android:enabled="false"
            android:defaultValue="08:00"
            android:key="timepicker"
            android:showDefault="true"
            android:summary="@string/notificacion_ochoam"
            android:title="@string/hnotificacion" />
    </PreferenceCategory>

    <RingtonePreference
        android:enabled="false"
        android:key="ringtone"
        android:ringtoneType="all"
        android:summary="@string/salmnotificacion"
        android:title="@string/almnotificacion" />

</PreferenceScreen>